# ens_data_challenge

./: .gitignore  debug_file.py  main.py  pyproject.toml  run_deepsurv.py
doc/: doc_features.md
models/optuna_params/: ElasticNet_20260125_172524.json  ElasticNet_20260125_172807.json  Lasso_20260125_172459.json  Lasso_20260125_172715.json  Ridge_20260125_172443.json  Ridge_20260125_172641.json
notebooks/: Benchmark_nqBJ7fO.ipynb  benchmark_feat_eng.ipynb  benchmark_pipeline_cells.py  cyto_struct_training.ipynb  first_pipeline.ipynb  kag_4_sol.ipynb  mol_struct_training.ipynb  optuna_refactored_cells.py  weight_checkpoint_2025-12-10_13-2-15_KS2yer5vkBiya1C29UjX.pt
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/ens_data_challenge/: gloabls.py  types.py
src/ens_data_challenge/feature_engineering/: __init__.py  feat_eng_helper.py  feat_engineer.py  feature_engineering.py
src/ens_data_challenge/preprocess/: __init__.py  preprocessor.py
src/ens_data_challenge/training/: __init__.py  event_classifier_trainer.py  feature_importance.py  metrics.py  model_factories.py  rank_regressors_trainer.py  trainers.py  transforms.py
test/: test_notebook.ipynb
test/feature_engineering/: feat_eng_helper.py  feature_engineering.py  test_feat.ipynb
test/feature_engineering/cytogenetics/: test_features.py  test_parser.py
test/preprocess/cytogenetics/: test_features.py  test_parser.py  test_prep2_notebook.ipynb  test_preprocessor.py  test_preprocessor2.py
(+24 files in other folders)
