[project]
name = "ens-data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "pydantic>=2.12.3",
    "scikit-survival>=0.25.0",
    "torch>=2.9.0",
    "xgboost>=3.1.1",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true


[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
